# Pixie

./: .env.example  .gitignore  ARCHITECTURE.md  CHECKLIST.md  FOLDER_STRUCTURE.md  INSTALLATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_NOW.md  README.md  README_NOW.md  SETUP_FIXES.md  START_HERE.md  index.html  package-lock.json  package.json  pyrefly.toml  vite.config.ts
backend/: main.py  requirements.txt
backend/api/: __init__.py
backend/api/routes/: __init__.py  chat.py  commands.py  health.py  memory.py  reminders.py
backend/brain/: __init__.py  ollama.py
backend/commands/: __init__.py
backend/config/: __init__.py  settings.py
backend/memory/: __init__.py  store.py
backend/models/: __init__.py  database.py  schemas.py
backend/reminders/: __init__.py  scheduler.py
backend/utils/: __init__.py  logger.py
docs/: API.md  DATABASE.md  DEVELOPMENT.md  IMPLEMENTATION.md
scratch/: generate_icons.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/animations/: index.ts
src/components/: ChatBubble.css  ChatBubble.tsx  PixieCharacter.css  PixieCharacter.tsx  PixieWindow.css  PixieWindow.tsx  index.ts
src/hooks/: index.ts  useAnimationState.tsx  usePixiCanvas.ts  usePixieChat.ts  useReminders.ts
src/services/: api.ts  index.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: index.ts
